# WebScrapePro

./: README.md  config.py  database.py  main.py  models.py  pyproject.toml  report_generator.py  requirements.txt  scheduler.py
alerts/: email_alert.py
analysis/: price_analysis.py  price_chart.py
dashboard/: app.py
database/: product_repository.py
scrapers/: amazon_scraper.py  base_scraper.py  flipkart_scraper.py
templates/: report.html
tests/: test_main.py
